--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Picker</title>
+    <title>Black Hole Simulation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Random Picker</h1>
-        <input type="text" id="itemInput" placeholder="Enter item">
-        <button id="addItemButton">Add Item</button>
-        <ul id="itemsList"></ul>
-        <button id="chooseButton">Choose</button>
-        <button id="resetButton">Reset</button>
+        <h1>Black Hole Simulation</h1>
+        <button id="form-star-btn">Attempt to Form a Star</button>
+        <div id="result"></div>
+        <canvas id="animation-canvas" width="400" height="400"></canvas>
     </div>
-    <script src="brains.js"></script>
+    <script src="science.js"></script>
 </body>
 </html>
